--- a/GymBros/index.html
+++ b/GymBros/index.html
@@ -1,12 +1,67 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>gb</title>
-  </head>
-  <body>
-    <a href="login.html"><button>Click me</button></a>
-  </body>
+<!DOCTYPE html>
+<html lang="de">
+
+<head>
+    <meta charset="UTF-8">
+    <title>Meine Website</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+
+
+</head>
+
+
+
+
+
+
+<body>
+    <section>
+
+        <nav>
+            <img src="./src/assets/dumbell.png" width="200" height="100">
+            <a href="https://www.youtube.com/@MCC95_Art">Home</a>
+            <a href="form.html">Form</a>
+            <a href="https://www.youtube.com/@MCC95_Art">Your Plan</a>
+            <a href="contact.html">About</a>
+        </nav>
+        <a href="login.html"><button style="background-color: orange;"> Join Now </button></a>
+
+    </section>
+    <section>
+        <div>
+            <H2>We create the
+                <span style="color: orange; ">Perfect <br> Plan</span> for you and take part <br> on your journey to your <br> Dream Body!</H2>
+        </div>
+        <div></div>
+
+        <p>Lets create the best Plan according to Science and <br> many years of Fitness and Bodybuilding Experience. <br> Optimize your Training to get the Maximum amount <br>of Muscle Gains </p>
+        <div></div>
+
+        <img src="./src/assets/dumbell.png" height="100 " width="200 ">
+    </section>
+
+    <section>
+        <div>
+            <H2>Fill the Form and achieve <span style="color: orange; ">your Goals   </span></H2>
+        </div>
+
+        <div>
+
+            <a href="form.html"><button>Get Started</button></a>
+        </div>
+    </section>
+
+
+    <section>
+
+        <footer>
+            <a href="https://www.youtube.com/@MCC95_Art ">Home</a>
+            <a href="form.html">Form</a>
+            <a href="https://www.youtube.com/@MCC95_Art ">Your Plan</a>
+            <a href="contact.html">About</a>
+    </section>
+
+
+</body>
+
 </html>
