--- a/GymBros/login.html
+++ b/GymBros/login.html
@@ -23,8 +23,8 @@
   <footer style="position:fixed; top:95%">
     <a href="index.html"><button>Back to Home</button></a>
     <a href="yourPlan.html"><button>Form</button></a>
-    <a href="forms.html"><button>Get your Plan</button></a>
-    <a href="about.html"><button>About</button></a>
+    <a href="form.html"><button>Get your Plan</button></a>
+    <a href="contact.html"><button>About</button></a>
     
   </footer>
 </html>
