--- a/GymBros/index.html
+++ b/GymBros/index.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Meine Website</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-
-
+    <link rel="stylesheet" href="src/style.css">
+    <link rel="stylesheet" href="src/grid.css">
 </head>
 
 
@@ -17,14 +16,16 @@
 <body>
     <section>
 
-        <nav>
-            <img src="./src/assets/dumbell.png" width="200" height="100">
-            <a href="https://www.youtube.com/@MCC95_Art">Home</a>
-            <a href="form.html">Form</a>
-            <a href="https://www.youtube.com/@MCC95_Art">Your Plan</a>
-            <a href="contact.html">About</a>
-        </nav>
+         <nav>
+      <ul>
+        <img src="./src/assets/dumbell.png" width="200" height="100">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="form.html">Form</a></li>
+        <li><a href="yourPlan.html">CV</a></li>
+        <li><a href="contact.html">Contact</a></li>
         <a href="login.html"><button style="background-color: orange;"> Join Now </button></a>
+        </ul>
+    </nav>  
 
     </section>
     <section>
